[gd_scene load_steps=3 format=3 uid="uid://b17am5hagtjx"]

[ext_resource type="Script" uid="uid://cihg8fqbh45mx" path="res://menu_principal.gd" id="1_bj1uy"]
[ext_resource type="Texture2D" uid="uid://cwtcshvmcu75a" path="res://assets/imagens/Menu.png" id="2_menu"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bj1uy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_menu")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titulo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 81
text = "Detetive de Dados"

[node name="BotaoIniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Iniciar Jogo"

[node name="BotaoHistoriaSQL" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "História do SQL"

[node name="BotaoOpcoes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Opções"

[node name="BotaoCreditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Créditos"

[node name="BotaoSair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Sair"

[connection signal="pressed" from="VBoxContainer/BotaoIniciar" to="." method="_on_botao_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoHistoriaSQL" to="." method="_on_botao_historia_sql_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoOpcoes" to="." method="_on_botao_opcoes_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoCreditos" to="." method="_on_botao_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoSair" to="." method="_on_botao_sair_pressed"]
